fix: fixed the overflowing error of the webpage

--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -1,6 +1,15 @@
 @import "./style";
 @import "./variables";
 
+// .banner,
+// .service-one,
+// .service,
+// .stats,
+// .about,
+// .team{
+//     width: 100%;
+//     // overflow-x: hidden;
+// }
 .banner{
     width: 100%;
     height: 100vh;
@@ -101,6 +110,7 @@
 }
 
 .service-one{
+    width: 100%;
 
     .service-container{
 
